completed the first phase

--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -140,7 +140,7 @@
                 {% endif %}
               </td>
               <td>
-                {{ unit.tenantcontract }}
+                {{ unit.tenantcontract.tenant.user.username.capitalize }}
               </td>
               <td>{{ unit.size }}</td>
               <td>{{ unit.size }}</td>
