--- a/templates/new_door/add_user_unit.html
+++ b/templates/new_door/add_user_unit.html
@@ -20,7 +20,8 @@
 
       <div class="card-body">
         <br />
-        {% comment %} Row1 {% endcomment %}
+        {% comment %} Row1 {% endcomment %} 
+          
         <div class="row">
           <div class="col-sm-6">
             <label class="col-sm-6 col-form-label">Username</label>
@@ -37,7 +38,11 @@
             </div>
             <label class="col-sm-6 col-form-label">Confirm password</label>
             <div class="col-sm-12">
-              <div class="form-group bmd-form-group">{{ form.password2 }}</div>
+              <div class="form-group bmd-form-group">
+                {{ form.password2 }} {% for error in form.password2.errors %}
+                <small style="color: red">{{ error }}</small>
+                {% endfor %}
+              </div>
             </div>
           </div>
 
