--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -25,7 +25,7 @@
       <div class="user-info">
         <a data-toggle="collapse" href="#collapseExample" class="username">
           <span>
-            {{ request.user.first_name }} {{ request.user.last_name }}
+            {{ request.user.get_full_name }}
             <b class="caret"></b>
           </span>
         </a>
