document upload done

--- a/templates/new_door/tenant_dashboard.html
+++ b/templates/new_door/tenant_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Tenant_Dashboard {% endblock title %} 
+{% extends 'base.html' %} {% block title %} Tenant Dashboard {% endblock title %} 
 {% block body %} 
 <p>Tenant Dashboard</p>
 <div class="row">
@@ -12,13 +12,6 @@
         <br /><br />
         <p class="card-category"><strong>Total Rent Amount</strong></p>
       </div>
-
-      <!-- <div class="card-footer">
-                <div class="stats">
-                    <i class="material-icons text-danger">warning</i>
-                    <a href="#pablo">Get More Space...</a>
-                </div>
-            </div> -->
     </div>
   </div>
   <div class="col-lg-3 col-md-6 col-sm-6">
