--- a/templates/new_door/add_user.html
+++ b/templates/new_door/add_user.html
@@ -125,19 +125,19 @@
         </div>
         {% comment %} Row6 {% endcomment %}
         <div class="mb-4 form-group d-flex">
-          <div class="col-md-4 ml-3">
-            <label class="form-check-label" for="is_owner">
+          <div class="form-check form-check-inline">
+            <label class="form-check-label" for="{{ form.is_owner.name }}">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="SMSNotify"
+                name="SMSNotify"
+                required="true"
+                aria-required="true"
+              />
               {{ form.is_owner }}
-              <span style="color: #a5a5a5">Is owner</span>
-              <span class="form-check-sign" style="left: 146px">
-                <span class="check"></span>
-              </span>
-            </label>
-          </div>
-          <div class="col-md-4">
-            <label class="form-check-label" for="is_tenant">
-              {{ form.is_tenant }}
-              <span style="color: #a5a5a5">Is tenant</span>
+              Is owner
               <span class="form-check-sign" style="left: 146px">
                 <span class="check"></span>
               </span>
