--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -133,15 +133,20 @@
                 >
                   {{ unit.occupancy_type.occupancy_type }}
                 </a>
+                {% elif unit.occupancy_type.occupancy_type.lower == 'document pending' %}
+                <a
+                  href="{% url 'review_documents' unit.tenantcontract.tenant.user.username %}"
+                  class="btn btn-primary btn-round occupancy_type"
+                >
+                  {{ unit.occupancy_type.occupancy_type }}
+                </a>
                 {% else %}
                 <button class="btn btn-primary btn-round occupancy_type">
                   {{ unit.occupancy_type.occupancy_type }}
                 </button>
                 {% endif %}
               </td>
-              <td>
-                {{ unit.tenantcontract.tenant.user.username.capitalize }}
-              </td>
+              <td>{{ unit.tenantcontract.tenant.user.username.capitalize }}</td>
               <td>{{ unit.size }}</td>
               <td>{{ unit.size }}</td>
 
@@ -265,7 +270,7 @@
           break;
 
         case "document pending":
-          occupancyType.style.backgroundColor = "pink";
+          occupancyType.style.backgroundColor = "lightblue";
           break;
 
         case "document review":
