--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -205,20 +205,27 @@
                 <span class="sidebar-normal"> Review Documents </span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'payment' %}">
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="">
                 <span class="sidebar-mini"> TC </span>
                 <span class="sidebar-normal"> Payment </span>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </li>
       {% endif %} {% if request.user.profile.is_tenant %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'upload_documents' request.user %}">
+        <a class="nav-link" href="{% url 'upload_documents' request.user.username %}">
           <i class="material-icons">cloud_upload</i>
           <span class="sidebar-normal"> Upload Documents </span>
+        </a>
+      </li>
+      <!-- TODO: Check if user documents are verified  -->
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'payment' request.user.username %}">
+          <i class="material-icons">attach_money</i>
+          <span class="sidebar-normal"> Make Payement</span>
         </a>
       </li>
       {% endif %}
