--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -194,7 +194,7 @@
               </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'add_tetant_contract' %}">
+              <a class="nav-link" href="{% url 'add_tetant_contract' request.user.username %}">
                 <span class="sidebar-mini"> TC </span>
                 <span class="sidebar-normal"> Tenant Contract </span>
               </a>
